--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
-    <title>React App</title>
+    <title>MicheleDeF's GitHub Page</title>
     <script defer="defer" src="/static/js/main.4330eb65.js"></script>
     <link href="/static/css/main.f855e6bc.css" rel="stylesheet">
 </head>
